Fix: Metadata corrections

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CardapioWeb</title>
+  <meta name="description" content="Jully Art's - Arte em fazer laços. Descubra nossos laços artesanais exclusivos.">
+  <meta name="keywords" content="laços, artesanato, Jully Art's, acessórios, moda">
+  <meta name="author" content="Andrey Lima">
+  <title>Jully Art's</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/logo-removebg-preview.png">
 </head>
 <body>
   <app-root></app-root>
